Fix: CSS z-index to 1 🔥

--- a/your-store-app/src/Dibyanshu/Components/Navbar/NavFolder/Navbar.module.css
+++ b/your-store-app/src/Dibyanshu/Components/Navbar/NavFolder/Navbar.module.css
@@ -1,6 +1,6 @@
 .container{
     position: fixed;
-    z-index: 100000;
+    z-index: 1;
     width: 100vw;
     margin-top: -97px;
 } 
@@ -96,7 +96,7 @@
 }  
 .content{
     position: absolute;
-    z-index: 100000;
+    z-index: 1;
     width: 100vw;
 }
 
